feat(articles): load articles items dynamically

--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -20,56 +20,33 @@
           </ul>
         </div>
 
-        <div class="article-preview">
+        <div
+          *ngFor="let article of $articles | async; trackBy: trackByFn"
+          class="article-preview"
+        >
           <div class="article-meta">
-            <a href="/profile/eric-simons"
-              ><img src="http://i.imgur.com/Qr71crq.jpg"
-            /></a>
+            <a href="/profile/{{ article.author.username }}">
+              <img [src]="article.author.image" />
+            </a>
             <div class="info">
-              <a href="/profile/eric-simons" class="author">Eric Simons</a>
-              <span class="date">January 20th</span>
+              <a href="/profile/{{ article.author.username }}" class="author">
+                {{ article.author.username }}
+              </a>
+              <span class="date">{{ article.createdAt }}</span>
             </div>
             <button class="btn btn-outline-primary btn-sm pull-xs-right">
-              <i class="ion-heart"></i> 29
-            </button>
-          </div>
-          <a
-            href="/article/how-to-build-webapps-that-scale"
-            class="preview-link"
-          >
-            <h1>How to build webapps that scale</h1>
-            <p>This is the description for the post.</p>
-            <span>Read more...</span>
-            <ul class="tag-list">
-              <li class="tag-default tag-pill tag-outline">realworld</li>
-              <li class="tag-default tag-pill tag-outline">implementations</li>
-            </ul>
-          </a>
-        </div>
-
-        <div class="article-preview">
-          <div class="article-meta">
-            <a href="/profile/albert-pai"
-              ><img src="http://i.imgur.com/N4VcUeJ.jpg"
-            /></a>
-            <div class="info">
-              <a href="/profile/albert-pai" class="author">Albert Pai</a>
-              <span class="date">January 20th</span>
-            </div>
-            <button class="btn btn-outline-primary btn-sm pull-xs-right">
-              <i class="ion-heart"></i> 32
+              <i class="ion-heart"></i> {{ article.favoritesCount }}
             </button>
           </div>
           <a href="/article/the-song-you" class="preview-link">
-            <h1>
-              The song you won't ever stop singing. No matter how hard you try.
-            </h1>
-            <p>This is the description for the post.</p>
+            <h1>{{ article.title }}</h1>
+            <p>{{ article.description }}</p>
             <span>Read more...</span>
-            <ul class="tag-list">
-              <li class="tag-default tag-pill tag-outline">realworld</li>
-              <li class="tag-default tag-pill tag-outline">implementations</li>
-            </ul>
+            @for (tag of article.tagList; track tag) {
+              <ul class="tag-list">
+                <li class="tag-default tag-pill tag-outline">{{ tag }}</li>
+              </ul>
+            }
           </a>
         </div>
 
