fix(articles): add date format in article created date

--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -32,13 +32,15 @@
               <a href="/profile/{{ article.author.username }}" class="author">
                 {{ article.author.username }}
               </a>
-              <span class="date">{{ article.createdAt }}</span>
+              <span class="date">{{
+                article.createdAt | date: "longDate"
+              }}</span>
             </div>
             <button class="btn btn-outline-primary btn-sm pull-xs-right">
               <i class="ion-heart"></i> {{ article.favoritesCount }}
             </button>
           </div>
-          <a href="/article/the-song-you" class="preview-link">
+          <a href="/article/{{ article.slug }}" class="preview-link">
             <h1>{{ article.title }}</h1>
             <p>{{ article.description }}</p>
             <span>Read more...</span>
