--- a/src/app/articles/article/article.component.html
+++ b/src/app/articles/article/article.component.html
@@ -79,6 +79,7 @@
         </div>
       </div>
 
+      <!-- TODO: list comments filtering by article -->
       <!-- <div class="row"> -->
       <!--   <div class="col-xs-12 col-md-8 offset-md-2"> -->
       <!--     <form class="card comment-form"> -->
