--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -20,89 +20,70 @@
       </div>
     </div>
 
-    <!-- TODO: list user articles -->
-    <!-- <div class="container"> -->
-    <!--   <div class="row"> -->
-    <!--     <div class="col-xs-12 col-md-10 offset-md-1"> -->
-    <!--       <div class="articles-toggle"> -->
-    <!--         <ul class="nav nav-pills outline-active"> -->
-    <!--           <li class="nav-item"> -->
-    <!--             <a class="nav-link active" href="">My Articles</a> -->
-    <!--           </li> -->
-    <!--           <li class="nav-item"> -->
-    <!--             <a class="nav-link" href="">Favorited Articles</a> -->
-    <!--           </li> -->
-    <!--         </ul> -->
-    <!--       </div> -->
-    <!---->
-    <!--       <div class="article-preview"> -->
-    <!--         <div class="article-meta"> -->
-    <!--           <a href="/profile/eric-simons"> -->
-    <!--             <img src="http://i.imgur.com/Qr71crq.jpg" /> -->
-    <!--           </a> -->
-    <!--           <div class="info"> -->
-    <!--             <a href="/profile/{{ profile.username }}" class="author">{{ -->
-    <!--               profile.username -->
-    <!--             }}</a> -->
-    <!--             <span class="date">January 20th</span> -->
-    <!--           </div> -->
-    <!--           <button class="btn btn-outline-primary btn-sm pull-xs-right"> -->
-    <!--             <i class="ion-heart"></i> 29 -->
-    <!--           </button> -->
-    <!--         </div> -->
-    <!--         <a -->
-    <!--           href="/article/how-to-buil-webapps-that-scale" -->
-    <!--           class="preview-link" -->
-    <!--         > -->
-    <!--           <h1>How to build webapps that scale</h1> -->
-    <!--           <p>This is the description for the post.</p> -->
-    <!--           <span>Read more...</span> -->
-    <!--           <ul class="tag-list"> -->
-    <!--             <li class="tag-default tag-pill tag-outline">realworld</li> -->
-    <!--             <li class="tag-default tag-pill tag-outline"> -->
-    <!--               implementations -->
-    <!--             </li> -->
-    <!--           </ul> -->
-    <!--         </a> -->
-    <!--       </div> -->
-    <!---->
-    <!--       <div class="article-preview"> -->
-    <!--         <div class="article-meta"> -->
-    <!--           <a href="/profile/albert-pai" -->
-    <!--             ><img src="http://i.imgur.com/N4VcUeJ.jpg" -->
-    <!--           /></a> -->
-    <!--           <div class="info"> -->
-    <!--             <a href="/profile/albert-pai" class="author">Albert Pai</a> -->
-    <!--             <span class="date">January 20th</span> -->
-    <!--           </div> -->
-    <!--           <button class="btn btn-outline-primary btn-sm pull-xs-right"> -->
-    <!--             <i class="ion-heart"></i> 32 -->
-    <!--           </button> -->
-    <!--         </div> -->
-    <!--         <a href="/article/the-song-you" class="preview-link"> -->
-    <!--           <h1> -->
-    <!--             The song you won't ever stop singing. No matter how hard you -->
-    <!--             try. -->
-    <!--           </h1> -->
-    <!--           <p>This is the description for the post.</p> -->
-    <!--           <span>Read more...</span> -->
-    <!--           <ul class="tag-list"> -->
-    <!--             <li class="tag-default tag-pill tag-outline">Music</li> -->
-    <!--             <li class="tag-default tag-pill tag-outline">Song</li> -->
-    <!--           </ul> -->
-    <!--         </a> -->
-    <!--       </div> -->
-    <!---->
-    <!--       <ul class="pagination"> -->
-    <!--         <li class="page-item active"> -->
-    <!--           <a class="page-link" href="">1</a> -->
-    <!--         </li> -->
-    <!--         <li class="page-item"> -->
-    <!--           <a class="page-link" href="">2</a> -->
-    <!--         </li> -->
-    <!--       </ul> -->
-    <!--     </div> -->
-    <!--   </div> -->
-    <!-- </div> -->
+    @if (articleData$ | async; as articleData) {
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-md-10 offset-md-1">
+            <div class="articles-toggle">
+              <ul class="nav nav-pills outline-active">
+                <li class="nav-item">
+                  <a class="nav-link active" href="">My Articles</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Favorited Articles</a>
+                </li>
+              </ul>
+            </div>
+
+            @for (article of articleData.articles; track article.slug) {
+              <div class="article-preview">
+                <div class="article-meta">
+                  <a href="/profile/{{ article.author.username }}">
+                    <img [src]="article.author.image" />
+                  </a>
+                  <div class="info">
+                    <a
+                      href="/profile/{{ article.author.username }}"
+                      class="author"
+                      >{{ article.author.username }}</a
+                    >
+                    <span class="date">
+                      {{ article.createdAt | date: "longDate" }}
+                    </span>
+                  </div>
+                  <button class="btn btn-outline-primary btn-sm pull-xs-right">
+                    <i class="ion-heart"></i> {{ article.favoritesCount }}
+                  </button>
+                </div>
+                <a href="/article/{{ article.slug }}" class="preview-link">
+                  <h1>{{ article.title }}</h1>
+                  <p>{{ article.description }}</p>
+                  <span>Read more...</span>
+                  <ul class="tag-list">
+                    @for (tag of article.tagList; track tag) {
+                      <li class="tag-default tag-pill tag-outline">
+                        {{ tag }}
+                      </li>
+                    }
+                  </ul>
+                </a>
+              </div>
+            }
+
+            <ul class="pagination">
+              @for (
+                page of generatePageList(articleData.articlesCount);
+                track page
+              ) {
+                <!-- <li class="page-item active"> -->
+                <li class="page-item">
+                  <a class="page-link" href="">{{ page }}</a>
+                </li>
+              }
+            </ul>
+          </div>
+        </div>
+      </div>
+    }
   }
 </div>
