feat(auth): create signin and signup request flow

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,9 +11,10 @@
           <li>That email is already taken</li>
         </ul>
 
-        <form>
+        <form [formGroup]="group">
           <fieldset class="form-group">
             <input
+              formGroupName="email"
               class="form-control form-control-lg"
               type="text"
               placeholder="Email"
@@ -21,12 +22,18 @@
           </fieldset>
           <fieldset class="form-group">
             <input
+              formGroupName="password"
               class="form-control form-control-lg"
               type="password"
               placeholder="Password"
             />
           </fieldset>
-          <button class="btn btn-lg btn-primary pull-xs-right">Sign in</button>
+          <button
+            onClick="submit()"
+            class="btn btn-lg btn-primary pull-xs-right"
+          >
+            Sign in
+          </button>
         </form>
       </div>
     </div>
