--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -11,9 +11,10 @@
           <li>That email is already taken</li>
         </ul>
 
-        <form>
+        <form [formGroup]="group">
           <fieldset class="form-group">
             <input
+              formControlName="username"
               class="form-control form-control-lg"
               type="text"
               placeholder="Username"
@@ -21,6 +22,7 @@
           </fieldset>
           <fieldset class="form-group">
             <input
+              formControlName="email"
               class="form-control form-control-lg"
               type="text"
               placeholder="Email"
@@ -28,12 +30,18 @@
           </fieldset>
           <fieldset class="form-group">
             <input
+              formControlName="password"
               class="form-control form-control-lg"
               type="password"
               placeholder="Password"
             />
           </fieldset>
-          <button class="btn btn-lg btn-primary pull-xs-right">Sign up</button>
+          <button
+            onClick="submit()"
+            class="btn btn-lg btn-primary pull-xs-right"
+          >
+            Sign up
+          </button>
         </form>
       </div>
     </div>
