--- a/src/app/articles/article/article.component.html
+++ b/src/app/articles/article/article.component.html
@@ -90,10 +90,7 @@
               ></textarea>
             </div>
             <div class="card-footer">
-              <img
-                src="http://i.imgur.com/Qr71crq.jpg"
-                class="comment-author-img"
-              />
+              <img [src]="article.author.image" class="comment-author-img" />
               <button class="btn btn-sm btn-primary">Post Comment</button>
             </div>
           </form>
@@ -120,9 +117,9 @@
                     class="comment-author"
                     >Jacob Schmidt</a
                   >
-                  <span class="date-posted">{{
-                    comment.createdAt | date: "longDate"
-                  }}</span>
+                  <span class="date-posted">
+                    {{ comment.createdAt | date: "longDate" }}
+                  </span>
                 </div>
               </div>
             }
